Refactor contact management to enforce user-specific access and enhance security checks